Removed Github For a while

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <input type="checkbox" name="" id="check">
           <div class="card">
                <div class="sidebar" id="sidebar">
-                    <a class="active" href="https://github.com/itzNightmare17" target="_blank">Github</a>
+                    <a class="active" href="#" target="_blank">Github</a>
                     <a class="active" href="https://instagram.com" target="_blank">Instagram</a>
                     <a class="active" href="https://www.youtube.com/@OREO-ry9ht" target="_blank">YouTube</a>
                     <a class="active" href="https://telegram.dog/reflex_Ore" target="_blank">Telegram</a>
@@ -70,7 +70,7 @@
                               <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
                          </div>
                          <div class="icons-container">
-                              <a href="https://github.com/itzNightmare17" class="icon">
+                              <a href="#" class="icon">
                                    <i class="fa-brands fa-github"></i>
                               </a>
                               <a href="https://instagram.com" class="icon">
@@ -85,7 +85,7 @@
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="https://github.com/itzNightmare17" class="follow">Follow</a>
+                                   <a href="#" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
                                    <a href="https://telegram.dog" class="share">Contact</a>
