Added Badges Icon

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                               <a href="https://www.youtube.com/@OREO-ry9ht" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
+                              <a href="#" class="icon">
+                                   <i class="fa-solid fa-medal"></i>
+                              </a>
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
