--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="css/style.css">
      <link rel="shortcut icon" href="images/atom.ico" type="image/x-icon">
+     <meta name="description" content="Sαмαятн Websites | Web development projects by Sαмαятн.">
+     <meta itemprop="name" content="Sαмαятн Portfolio">
+     <meta itemprop="description" content="Sαмαятн Portfolio | Web development projects by Sαмαятн.">
+     <meta itemprop="image" content="images/pfp2.jpg">
+     <meta content="Sαмαятн Portfolio" property="og:site_name">
+     <meta property="og:type" content="Sαмαятн">
+     <meta content="https://itznightmare17.github.io/" property="og:url">
+     <meta content="OreO @reflex_Ore" property="og:title">
+     <meta content="images/pfp2.jpg" property="og:image">
+     <meta content="Sαмαятн Portfolio | Web development projects by Sαмαятн." property="og:description">
 </head>
 
 <body id="body" class="dark" oncontextmenu="return false">
@@ -28,7 +38,7 @@
      </div>
 
      <div class="modal">
-          <img src="images/pfp.jpg" alt="Eren">
+          <img src="images/pfp2.jpg" alt="Eren">
           <div class="close"></div>
      </div>
 
@@ -120,6 +130,12 @@
      </script>
      <script src="js/app.js"></script>
      <script src="js/37248b2d5c.js"></script>
+     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+     <script src="https://cdn.jsdelivr.net/gh/tuhinpal/contact-form@master/src/contact-form.min.js" id="contactform"
+          error_text="Oops! Something went wrong!"
+          success_text="Your message has been delivered! I'll contact you back in the provided details as soon as possible! Please wait half a day before trying to send a new message!"
+          disable_waittime="false" form_worker_url="https://square-firefly-5935.samarth.workers.dev/">
+     </script>
 
 </body>
 
