--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                <div class="sidebar" id="sidebar">
                     <a class="active" href="#" target="_blank">Github</a>
                     <a class="active" href="https://instagram.com" target="_blank">Instagram</a>
-                    <a class="active" href="https://www.youtube.com/@OREO-ry9ht" target="_blank">YouTube</a>
-                    <a class="active" href="https://telegram.dog/reflex_Ore" target="_blank">Telegram</a>
+                    <a class="active" href="https://www.youtube.com/@OreoKaChannel" target="_blank">YouTube</a>
+                    <a class="active" href="https://telegram.dog/riotOreo" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
                     <label for="check" class="checkbtn" id="chkbtn">
@@ -86,10 +86,10 @@
                               <a href="https://instagram.com" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/reflex_Ore" class="icon">
+                              <a href="https://telegram.dog/riotoreo" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
-                              <a href="https://www.youtube.com/@OREO-ry9ht" class="icon">
+                              <a href="https://www.youtube.com/@OreoKaChannel" class="icon">
                                    <i class="fa-brands fa-youtube"></i>
                               </a>
                               <a href="#" class="icon">
@@ -101,7 +101,7 @@
                                    <a href="#" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog" class="share">Contact</a>
+                                   <a href="https://telegram.dog/riotoreo" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
