--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
      <meta itemprop="image" content="images/pfp2.jpg">
      <meta content="Sαмαятн Portfolio" property="og:site_name">
      <meta property="og:type" content="Sαмαятн">
-     <meta content="https://itznightmare17.github.io/" property="og:url">
-     <meta content="OreO @reflex_Ore" property="og:title">
+     <meta content="OreO @RiotOreO" property="og:title">
      <meta content="images/pfp2.jpg" property="og:image">
      <meta content="Sαмαятн Portfolio | Web development projects by Sαмαятн." property="og:description">
 </head>
@@ -47,7 +46,7 @@
           <div class="card">
                <div class="sidebar" id="sidebar">
                     <a class="active" href="#" target="_blank">Github</a>
-                    <a class="active" href="https://instagram.com" target="_blank">Instagram</a>
+                    <a class="active" href="#" target="_blank">Instagram</a>
                     <a class="active" href="https://www.youtube.com/@OreoKaChannel" target="_blank">YouTube</a>
                     <a class="active" href="https://telegram.dog/riotOreo" target="_blank">Telegram</a>
                </div>
@@ -83,7 +82,7 @@
                               <a href="#" class="icon">
                                    <i class="fa-brands fa-github"></i>
                               </a>
-                              <a href="https://instagram.com" class="icon">
+                              <a href="#" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
                               <a href="https://telegram.dog/riotoreo" class="icon">
@@ -135,8 +134,7 @@
           error_text="Oops! Something went wrong!"
           success_text="Your message has been delivered! I'll contact you back in the provided details as soon as possible! Please wait half a day before trying to send a new message!"
           disable_waittime="false" form_worker_url="https://square-firefly-5935.samarth.workers.dev/">
-     </script>
-
+          </script>
 </body>
 
 </html>
